--- a/toolkit/test/accessibility/news.html
+++ b/toolkit/test/accessibility/news.html
@@ -1,4 +1,15 @@
 <html><body bgcolor="#fffaf0">
+<h1>News for AWB v1.7.2</h1>
+<p>Adaption to recent UAA changes: 
+<ul>
+<li>Introduction of
+com.sun.star.accessibility.TextSegment structure that is returned by some
+functions of the XAccessibleText interface.</li>
+<li>Removal of the COLLAPSED state.</li>
+<li>Renaming of XAccessibleSelectioni::selectAllAccessible to
+selectAllAccessibleChildren.</li>
+</ul>
+
 <h1>News for AWB v1.7</h1>
 
 <ul>
